fix(listen): scrollbar styling (desktop)
- reduce podcast logo size (desktop)
- bottom gutter should now be correct when player is not shown

--- a/components/Listen/EpisodeList/EpisodeList.module.scss
+++ b/components/Listen/EpisodeList/EpisodeList.module.scss
@@ -91,13 +91,9 @@ $episodeList-header-icon-color--active: colors.$white;
 }
 
 .episodeList {
-  overflow: hidden;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
+  @include Listen.scrollbar;
 
-  padding-block-end: calc(
-    var(--gutter-size-block-end, var(--gutter-size-block)) + 1rem
-  );
+  padding-block-end: var(--gutter-size-block-end, var(--gutter-size-block));
 }
 
 .tracks {
