--- a/components/Listen/Listen.module.scss
+++ b/components/Listen/Listen.module.scss
@@ -3,8 +3,8 @@
 @use '@styles/theme';
 @use './Listen.use.scss' as *;
 
-$logo-size: 300px;
-$logo-size--mobile: 40px;
+$logo-size: 12.5rem;
+$logo-size--mobile: 2.5rem;
 
 $viewTransitionDuration: 300ms;
 
@@ -14,6 +14,10 @@ $viewTransitionDuration: 300ms;
   --listen-text-color: #{$listen-text-color};
 
   --listen-divider-color: #{$listen-divider-color};
+
+  --listen-scrollbar-width: #{$listen-scrollbar-width};
+  --listen-scrollbar-thumb-color: #{$listen-scrollbar-thumb-color};
+  --listen-scrollbar-thumb-color--hover: #{$listen-scrollbar-thumb-color--hover};
 
   breakpointFull: #{$breakpoint-full};
 
@@ -37,7 +41,10 @@ $viewTransitionDuration: 300ms;
 
     --listen-text-color: #{colors.$black};
 
-    --listen-divider-color: #{colors.$black-a-60};
+    --listen-divider-color: #{colors.$black-a-20};
+
+    --listen-scrollbar-thumb-color: #{colors.$black-a-20};
+    --listen-scrollbar-thumb-color--hover: #{colors.$black-a-60};
 
     // BackgroundImage
     --backgroundImage-tint-color: #{colors.$white};
@@ -61,10 +68,10 @@ $viewTransitionDuration: 300ms;
     --episodeList-header-icon-color--active: #{colors.$black};
 
     // EpisodeCard
-    --episodeCard-divider-color: #{colors.$black-a-60};
+    --episodeCard-divider-color: #{colors.$black-a-20};
 
     // Episode
-    --episode-divider-color: #{colors.$black-a-60};
+    --episode-divider-color: #{colors.$black-a-20};
 
     // FooterPlayer
     --footerPlayer-background-color: #{colors.$white-a-60};
@@ -100,7 +107,7 @@ $viewTransitionDuration: 300ms;
   }
 
   @media (min-width: $breakpoint-full) {
-    grid-template-columns: min-content 1fr;
+    grid-template-columns: 40ch 2fr;
     grid-template-rows: 1fr min-content;
     grid-template-areas:
       'SIDEBAR MAIN'
@@ -121,8 +128,6 @@ $viewTransitionDuration: 300ms;
   grid-template-columns: $logo-size--mobile 1fr;
   column-gap: 1rem;
   z-index: 9;
-  overflow: hidden;
-  overflow-y: auto;
 
   padding: 0.75rem;
 
@@ -137,15 +142,16 @@ $viewTransitionDuration: 300ms;
       grid-area: SIDEBAR;
 
       grid-template-columns: none;
+      justify-items: stretch;
       align-content: start;
       row-gap: 0.75rem;
 
       padding-block-start: var(--gutter-size-block);
-      padding-block-end: calc(
-        var(--gutter-size-block-end, var(--gutter-size-block)) + 0.75rem
-      );
-      padding-inline-start: var(--gutter-size-inline, 2rem);
-      padding-inline-end: 0;
+      padding-block-end: var(--gutter-size-block-end, var(--gutter-size-block));
+      padding-inline: 0;
+
+      margin-inline-start: var(--gutter-size-inline, 2rem);
+      margin-inline-end: 0;
 
       border-block-end: none;
     }
@@ -154,6 +160,8 @@ $viewTransitionDuration: 300ms;
       display: grid;
       padding: 0;
     }
+
+    @include scrollbar;
   }
 }
 
